object store  code cleanup